--- a/05JPA/03_엔티티매핑.md
+++ b/05JPA/03_엔티티매핑.md
@@ -1,4 +1,5 @@
-엔티티 매핑
+# 엔티티 매핑
+```
 1. 객체와 테이블 매핑
 : @Entity가 붙은 클래스는 JPA가 관리, 엔티티라함
 : 기본생성자 필수(파라미터 없는 public protected)
@@ -9,6 +10,7 @@
 
 
 2. DB 스키마 자동생성
+: 실무에선 사용하면 안된다
 : hibernate.hbm2ddl.auto
 : create - 기존테이블 삭제 후 다시 생성
 : create-drop - create와 동일, 종료시점에 테이블 drop
@@ -63,7 +65,6 @@
 : 권장하는 식별자 전략
 : Long형 + 대체키 + 키 생성전략 사용
 
-
 IDENTITY전략은 DB에 들어갈 때 PK가 생성되기 때문에
 원래 JPA는 commit 시점에 쿼리가 flush되는데, 이 전략만 특이하게 persist할 때 쿼리가 날라감
 그래야 영속성 컨텍스트에서 관리할 수 있기 때문임
@@ -74,4 +75,4 @@ SEQUENCE전략은 persist할때 시퀀스한테 PK를 얻어옴
 @SequenceGenerator의 allocationSize옵션을 50으로 설정해놓으면 매번 DB에 접근하는게 아니라
 50까지 메모리에 두고 채워질때까지는 메모리에서 가져올 수 있고 다 차면 DB에 한번 요청해서
 51~100까지 확보해놓기 때문에 성능을 향상시킬 수 있다
-
+```
