--- a/05JPA/02_영속성컨텍스트.md
+++ b/05JPA/02_영속성컨텍스트.md
@@ -1,4 +1,5 @@
-영속성 컨텍스트
+# 영속성 컨텍스트
+```
 엔티티를 영구 저장하는 환경
 엔티티 매니저를 통해 영속성 컨텍스트에 접근(EntityManage.persist(entity))
 
@@ -18,8 +19,6 @@
 : em.remove(member);
 : 다시 말하지만 detach, remove 등이 쿼리를 날리는게 아니라
 : 영속성 컨텍스트에서 떼어내거나 삭제하는 작업임
-
-
 
 이점
 1. 엔티티 조회, 1차 캐시
@@ -79,3 +78,4 @@
 : em.detach(entity); - 특정 엔티티만 준영속 상태로 전환 
 : em.close(); - 영속성 컨텍스트를 종료
 : em.clear(); - 영속성 컨텍스트를 완전히 초기화
+```
