--- a/05JPA/04_연관관계매핑.md
+++ b/05JPA/04_연관관계매핑.md
@@ -1,3 +1,5 @@
+# 연관관계 매핑
+```
 객체를 테이블에 맞춰 데이터 중심으로 모델링하면 협력 관계를 만들 수 없음
 객체지향스럽지 않다
 
@@ -36,18 +38,14 @@ Team team = em.find(Team.class, teamId);
 : 객체지향스럽지 않다
 : 객체지향스러우려면 member.getTeam()이 자연스럽다
 
-ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
-
-객체 지향 모델링
-
-정말 중요한것
 @JoinColumn(name = "")의 name 옵션은 
 대상 테이블의 PK를 적는줄 알았지만 FK이름을 지정하는거임
 원래 referencedColumnName를 사용해서 대상 테이블의 FK를 지정하는 것인데
 지정하지 않으면 대상엔티티의 PK를 JPA가 알아서 외래키로 걸어줌
+```
 
-
-단방향 연관관계 
+## 단방향 연관관계 
+```
 ex)
 @Entity
 public class Member {
@@ -71,10 +69,10 @@ public class Team {
 : Team team = find(Team.class, 100L);
 : team.getMember(); // 불가능
 : 단방향 연관관계에서는 불가능함
+```
 
-
-
-양방향 연관관계
+## 양방향 연관관계
+```
 ex)
 @Entity
 public class Team {
@@ -95,11 +93,11 @@ public class Team {
 : 단방향 매핑만으로도 이미 연관관계 매핑은 완료됨
 : 양방향 매핑은 반대방향으로 조회 기능이 추가된 것 뿐
 : 일단 단방향 매핑만 하고 양방향은 필요할 때 추가할 것
+```
 
-
-
-연관 관계의 주인
-양방향 매핑 규칙
+## 연관 관계의 주인
+```
+★★★ 양방향 매핑 규칙 ★★★
 1. 객체의 두 관계중 하나를 주인으로 지정
 2. 연관관계의 주인만이 외래키를 관리(등록, 수정)
 3. 주인이 아닌쪽은 읽기만가능
@@ -108,6 +106,7 @@ public class Team {
 
 => ★★★ 외래키가 있는쪽이 주인임
 => "다" 쪽이 주인, "일" 쪽에 가짜매핑mappedBy를 걸어줌
+=> 연관관계의 주인은 외래 키의 위치를 기준으로 정해야함
 
 가장많이 하는 실수
 Team team = new Team();
@@ -127,7 +126,7 @@ em.persist(member);
 => team.getMembers().add(member);
 => jpa문법상에서는 윗줄을 안넣어도 삽입이 잘 됨
 => 만약 양방향 연관관계를 설정했다면,
-=> ★★★ 항상 양쪽의 값을 설정할 것 !!!
+=> 항상 양쪽의 값을 설정할 것 !!!
 
 
 
@@ -149,3 +148,59 @@ em.persist(member);
     toString() (lombok toString조심)
     JSON생성라이브러리(컨트롤러에서 엔티티를 직접 리턴하지말것)
     엔티티는 DTO로 변환해서 리턴할 것
+```
+
+## 다대일 
+```
+결론 -> 쓰지말자
+
+테이블을 추가해 
+다대일 연관관계 2개를 사용해서 풀어내자
+```
+
+## 일대다
+```
+일대다 단방향은 일대다(1:N)에서 일(1)이 연관관계의 주인
+하지만 테이블 일대다 관계는 항상 다(N) 쪽에 외래 키가 있음
+엔티티가 관리하는 외래 키가 다른 테이블에 있음
+연관관계 관리를 위해 추가로 UPDATE SQL 실행
+
+ex)
+Member member = new Member();
+em.persist(member); // insert query
+// team_id - null로 insert 됨
+
+Team team = new Team();
+team.getMembers().add(member)
+em.persist(team); // insert query
+
+// + update query가 추가적으로 실행됨
+
+결론 -> 일대다 단방향 매핑보다는 다대일 양방향 매핑을 사용하자
+```
+
+## 일대일
+```
+주 테이블이나 대상 테이블 중 외래키 선택 가능
+외래 키에 DB Unique 제약조건 추가
+다대일과 거의 동일
+
+주 테이블에 외래 키
+• 주 객체가 대상 객체의 참조를 가지는 것 처럼 주 테이블에 외래 키를 두고 대상 테이블을 찾음
+• 객체지향 개발자 선호
+• JPA 매핑 편리
+• 장점: 주 테이블만 조회해도 대상 테이블에 데이터가 있는지 확인 가능
+• 단점: 값이 없으면 외래 키에 null 허용
+대상 테이블에 외래 키
+• 대상 테이블에 외래 키가 존재
+• 전통적인 데이터베이스 개발자 선호
+• 장점: 주 테이블과 대상 테이블을 일대일에서 일대다 관계로 변경할 때 테이블 구조 유지
+• 단점: 프록시 기능의 한계로 지연 로딩으로 설정해도 항상 즉시 로딩됨(프록시는 뒤에서 설명)
+
+결론 -> 주 테이블에 외래 키 방식을 사용할 것
+```
+
+## 다대다
+```
+
+```
