--- a/05JPA/06_프록시와연관관계관리.md
+++ b/05JPA/06_프록시와연관관계관리.md
@@ -1,7 +1,9 @@
-프록시
+# 프록시, 연관관계 관리
+## 프록시 기초
+```
 : em.find() vs em.getReference()
 : em.find(): 데이터베이스를 통해서 실제 엔티티 객체 조회
-: em.getReference(): 데이터베이스 조회를 미루는 가짜(프록시) 엔티티 객체 조회
+: em.getReference(): 데이터베이스 조회를 미루는 가짜(프록시) 엔티티 객체 조회(Hibernate Proxy)
 : ex)
 : // DB에 쿼리문을 날리지 않음
 : Member member = em.getReference(Member.class, 1L);
@@ -12,7 +14,7 @@
 : 실제 클래스를 상속 받아 만들어짐
 : 실제 클래스와 겉 모양이 같음
 : em.getReference() 호출하면 Member를 상속받은 프록시를 만들어서 리턴하는 것
-: 프록시에는 실제 객체 member의 참조를 보관함
+: 프록시에는 실제 객체의 참조를 보관함
 : 프록시 객체를 호출하면 실객체를 호출함
 
 프록시 초기화 과정
@@ -35,17 +37,17 @@ Member findMember = em.find(Member.class, 1L);
 refMember는 Proxy고 findMember는 Member일까?
 동일성을 보장해야하기 때문에 둘 다 Proxy이다
 6. 영속성 컨텍스트의 도움을 받을 수 없는 준영속 상태일 때, 프록시를 초기화하면 문제 발생
-(하이버네이트는 org.hibernate.LazyInitializationException 예외를 터트림)
+(하이버네이트는 org.hibernate.LazyInitializationException 예외를 터트림 - no session)
 
 프록시 확인
-PersistenceUnitUtil.isLoaded(Object entity); - 프록시 인스턴스의 초기화 여부 확인
+emf.getPersistenceUnitUtil.isLoaded(Object entity); - 프록시 인스턴스의 초기화 여부 확인
 entity.getClass().getName() 출력 
-org.hibernate.Hibernate.initialize(entity); - 프록시 강제 초기화
+org.hibernate.Hibernate.initialize(entity); - 프록시 강제 초기화(Hibernate)
 참고: JPA 표준은 강제 초기화 없음 - 강제 호출: member.getName()
+```
 
-
-
-즉시로딩과 지연로딩
+## 즉시로딩, 지연로딩
+```
 ... in MemberClass
 @ManyToOne(fetch = 옵션)
 FetchType.EAGER - 즉시(실 Entity 반환)
@@ -55,23 +57,28 @@ FetchType.LAZY - 지연(프록시 객체 반환)
 private Team team; // team을 지연로딩으로 설정
 
 Member memer = em.find(Member.class, 1L);
-member.getTeam(); // Proxy임
-member.getTeam().getName(); // 이런식으로 실제써야지만 프록시가 초기화됨
+member.getTeam(); // HibernateProxy
+member.getTeam().getName(); // 이런식으로 실제써야지만 프록시가 초기화됨(DB)
+// FetchType.EAGER로 설정하면 실제객체임
 
 주의
-1. 가급적 지연로딩만 사용
-2. 즉시 로딩은 JPQL에서  N+1 문제를 일으킴
--> EAGER로 지정된 Entity를 가져와야해서 Member 10명을 조회하면 10번 TEAM테이블의 쿼리가 나감 select * from team where team_id = n
--> fetch join 등으로 한번의 쿼리로 데이터를 가져올 수 있음
+1. 가급적 지연로딩만 사용(기본적으로 LAZY로딩으로 깔아놓자)
+2. 즉시 로딩은 JPQL에서  N+1 문제를 일으킴(N = 추기 쿼리, 1 = 첫 쿼리)
+    EAGER로 지정된 Entity를 가져와야해서 Member 10명을 조회하면 10번 TEAM테이블의 쿼리가 나감 select * from team where team_id = n
+    fetch join 등으로 한번의 쿼리로 데이터를 가져올 수 있음
 3. @XToOne은 기본이 즉시로딩이라 따로 지연로딩으로 설정할 것
 4. @XToMany는 기본이 지연로딩
+```
 
-
-
-영속성 전이(cascade) / 고아객체 - 로딩과 관계없다
+## 영속성 전이(cascade), 고아객체
+```
+영속성 전이, 고아객체 
+: @OneToMany | @OneToOne 에서만 사용
+: 로딩과 관계없다
 : 특정 엔티티를 영속 상태로 만들 때 연관된 엔티티도 함께 영속상태로 만들도 싶을 때
-: 부모 저장시 자식도 같이 저장하고 싶을 때
+: 부모 저장(삭제)시 자식도 같이 저장(삭제)하고 싶을 때
 : 다대일 관계에서 "일" 쪽에 걸어야함 + 소유자가 하나일경우 child가 parent만 관계가 있을 때
+: 상동 - 특정 엔티티가 개인소유일 때만 사용함(다른 엔티티와 연관이 없을 경우)
 
 ex) 
 class Parent {
@@ -105,18 +112,18 @@ CASCADE의 종류
 고아 객체
 : 부모 엔티티와 연관관계가 끊어진 자식 엔티티를 자동으로 삭제
 : Parent parent = em.find(Parent.class, id);
-: parent.getChildList().remove(0);
-: (orpganRemoval = true)
+: parent.getChildList().remove(0); // (orphanRemoval = true)면 delete query가 수행됨
+: (orphanRemoval = true)
 : + 부모를 제거하면 자식도 함께 제거된다
 :   마치 cascade remove처럼 동작함
-: orphanRemovel 옵션사용
 
 생명주기
 : CascadeType.ALL + orphanRemovel=true 
 : 두 옵션을 모두 활성화 하면 부모 엔티티를 통해서 자식의 생명주기를 관리할 수 있음
+```
 
-
-
+## 값타입
+```
 값 타입
 최상위 - 엔티티, 값 타입
 엔티티 타입
@@ -168,3 +175,4 @@ member.setAddress(new Adderss("", "", ""));
 : 지연로딩으로 동작함
 : 값 타입 컬렉션에 변경 사항이 발생하면, 주인 엔티티와 연관된 모든 데이터를 삭제하고, 값 타입 컬렉션에 있는 현재 값을 모두 다시 저장한다. 
 : 쓰지마라 ㅅㄱ
+```
