--- a/05JPA/06_프록시와연관관계관리.md
+++ b/05JPA/06_프록시와연관관계관리.md
@@ -146,8 +146,8 @@ CASCADE의 종류
 임베디드 타입(복합 값 타입)
 : 값 타입임
 : 그냥 기본 값 타입을 묶는 것
-: @Embeddable: 값 타입을 정의하는 곳에 표시
-: @Embedded: 값 타입을 사용하는 곳에 표시
+: @Embeddable: 값 타입을 정의하는 곳에 표시(class annotation)
+: @Embedded: 값 타입을 사용하는 곳에 표시(member field annotation)
 : 기본생성자 필수
 : 객체타입이라 공유를 조심해야함 -> 참조 값을 직접 대입하는 것을 막을 방법이 없다
 
@@ -160,8 +160,10 @@ Member mebmer = em.find(Member.class, 1L);
 member.setAddress(new Adderss("", "", ""));
 -> primitive가 아닌이상
 -> 이렇게 통으로 바꿔야함
+결론 -> 다 불변으로 만들어야함
 
 값 타입의 비교
+: 인스턴스가 달라도 그 안에 값이 같으면 같은 것으로 봐야함
 : primitive type의 경우는, 동일성(==) 비교
 : embeded type의 경우는, 동등성(.equals) 비교(equals, hashcode 오버라이딩 해줄 것)
 
