--- a/05JPA/07_객체지향쿼리언어.md
+++ b/05JPA/07_객체지향쿼리언어.md
@@ -1,3 +1,5 @@
+# 객체지향 쿼리언어
+```
 JPQL
 : 검색을 할 때도 테이블이 아닌 엔티티 객체를 대상으로 검색
 : JPA는 SQL을 추상화한 JPQL이라는 객체 지향 쿼리 언어 제공
@@ -5,6 +7,12 @@ JPQL
 : SQL을 추상화해서 특정 데이터베이스 SQL에 의존X 
 : 객체 지향 SQL
 : 참고 - commit하거나, JPQL 쿼리사용 시점에 DB에 반영된다 
+
+
+
+※ 참고
+네이티브 쿼리도 수행할 수 있다
+em.createNativeQuery()
 
 
 
@@ -22,7 +30,7 @@ JPQL
 결과 타입이 명확한 경우
 TypeQuery<Member> = em.createQuery("select m from Member m", Member.class);
 명확하지 않다면
-Query query = em.createQuery("select m.username, m,age from Member m");
+Query query = em.createQuery("select m.username, m.age from Member m");
 
 
 
@@ -36,7 +44,7 @@ query.getSingleResult(): 결과가 정확히 하나
 
 
 파라미터 바인딩
-이름 기준(:)
+이름 기준(:) - 권장
 em.createQuery("select m from Member m where m.age=:age").setParameter("age", 10);
 위치 기준(?)
 em.createQuery("select m from Member m where m.age=?1").setParameter(1, 10);
@@ -67,7 +75,6 @@ em.createQuery("select m from Member m where m.age=?1").setParameter(1, 10);
 : ★★★
 : select new ... -> 엔티티가 아니라 DTO를 조회하기 떄문에 fetch join을 사용할 수 없다 -> 페치조인보다 성능이 살짝 좋음(별차이 없긴함), 유연하지 못함
 : select o ...   -> fetch join은 엔티티 그래프를 한번에 같이 조회하기 위해 사용하는 기능임 -> select절에 엔티티를 지정 -> 상대적으로 유연함(로직에서 활용성이 있음)
-
 
 
 
@@ -173,7 +180,6 @@ persistence.xml
 : fetch조인으로 해결해야함
 : 페치조인예시.txt 확인
 
-
 페치조인과 DISTINCT
 : SQL의 DISTINCT는 중복된 결과를 제거하는 명령
 1. SQL에 DISTINCT를 추가
@@ -183,13 +189,11 @@ select distinct t from Team t join fetch t.members where t.name = ‘팀A’
 DISTINCT가 추가로 애플리케이션에서 중복 제거시도
 같은 식별자를 가진 Team 엔티티 제거
 
-
 일반조인 vs 페치조인
 : JPQL은 결과를 반환할 때 연관관계 고려X 
 : 단지 SELECT 절에 지정한 엔티티만 조회할 뿐
 : 페치 조인을 사용할 때만 연관된 엔티티도 함께 조회(즉시 로딩)
 : 페치 조인은 객체 그래프를 SQL 한번에 조회하는 개념
-
 
 페치조인의 특징, 한계
 : 페치 조인 "대상"에는 별칭을 줄 수 없다(하이버네이트는 가능, 가급적 사용X)
@@ -206,7 +210,6 @@ class Team {
     @BatchSize()
     private List<Member> members = new ArrayList<>();
 }
-
 
 페치조인 정리
 : 모든 것을 페치 조인으로 해결할 수 는 없음
@@ -267,3 +270,4 @@ List<Member> resultList = em.createNamedQuery("Member.findByUsername", Member.cl
 : 벌크 연산은 영속성 컨텍스트를 무시하고 데이터베이스에 직접 쿼리
 : 벌크 연산을 먼저 실행
 : ★★★ 벌크 연산 수행 후 영속성 컨텍스트 초기화
+```
