--- a/06스프링부트와JPA활용2/02_지연로딩조회최적화.md
+++ b/06스프링부트와JPA활용2/02_지연로딩조회최적화.md
@@ -1,4 +1,5 @@
-
+# 지연 로딩과 조회 성능 최적화(XToOne)
+```
 LAZY, EAGER는 N+1 문제가 있다
 둘 다 쿼리 조회 결과가 n건이라면 
 쿼리 1번 + 연관된 매핑 건수 x n건이 발생함
@@ -25,3 +26,6 @@ join o.delivery d
 2. 필요하면 페치 조인으로 성능을 최적화 한다. 대부분의 성능 이슈가 해결된다.
 3. 그래도 안되면 DTO로 직접 조회하는 방법을 사용한다.
 4. 최후의 방법은 JPA가 제공하는 네이티브 SQL이나 스프링 JDBC Template을 사용해서 SQL을 직접 사용한다
+
+(순수 Entity용 Repository / DTO용 Repository)를 따로 분리하는 것도 좋은 방법
+```
