--- a/06스프링부트와JPA활용2/03_컬렉션조회최적화.md
+++ b/06스프링부트와JPA활용2/03_컬렉션조회최적화.md
@@ -1,12 +1,13 @@
-컬렉션 조회 최적화 
-일단 페치조인을 써야함
+# 컬렉션 조회 최적화
+```
+일단 fetch join을 써야함
 
 JPQL의 distinct는 컬럼중복을 제거하는게 아니라 엔티티 중복을 걸러서 컬렉션에 담아주는 것
 
-일대다(컬렉션 페치조인)를 fetch join하는 순간 페이징이 불가능함
+일대다(컬렉션 fetch join)를 fetch join하는 순간 페이징이 불가능함
 -> 메모리에서 페이징을 함 
 
-일대다(컬렉션 페치조인)은 1개만 사용가능
+일대다(컬렉션 fetch join)은 1개만 사용가능
 
 
 
@@ -46,8 +47,24 @@ default_batch_fetch_size 적용을 하면?
 
 
 장점
-: 쿼리 호출 수가 1 + N 1 + 1 로 최적화 된다.
-: 조인보다 DB 데이터 전송량이 최적화 된다. (Order와 OrderItem을 조인하면 Order가
-: OrderItem 만큼 중복해서 조회된다. 이 방법은 각각 조회하므로 전송해야할 중복 데이터가 없다.)
+: 쿼리 호출 수가 1 + N -> 1 + 1 로 최적화 된다.
+: 조인보다 DB 데이터 전송량이 최적화 된다. (Order와 OrderItem을 조인하면 Order가 OrderItem 만큼 중복해서 조회된다. 이 방법은 각각 조회하므로 전송해야할 중복 데이터X)
 : 페치 조인 방식과 비교해서 쿼리 호출 수가 약간 증가하지만, DB 데이터 전송량이 감소한다.
 : 컬렉션 페치 조인은 페이징이 불가능 하지만 이 방법은 페이징이 가능하다.
+
+
+
+정리
+컬렉션(XToMany)의 경우 fetch join을 사용하면 페이징이 불가능함 + 결과데이터가 뻥튀기된다
+페이징을 사용하고 데이터가 뻥튀기 되지 않으려면 
++ 일대다를 fetch join 과 페이징을 동시에 사용하면 메모리에서 페이징해버림 -> 절대하면 안됨
++ 기대 결과 row count와 실제 query row count가 달라져 버리기 때문에 메모리에서 페이징해버리는것
++ 일대다 fetch join을 사용하더라도 1개만 사용가능
+
+권장
+spring.jpa.properties.hibernate.default_batch_fetch_size로 글로벌 설정하거나
+@BatchSize 어노테이션을 사용해야한다
+
+비권장
+select distinct를 사용(SQL에서 해결)
+```
