--- a/07스프링데이터JPA/02_쿼리메서드.md
+++ b/07스프링데이터JPA/02_쿼리메서드.md
@@ -1,4 +1,6 @@
-쿼리메서드 - 짤막한 쿼리 짤 때 사용하면 좋음 ex) findByUsername 이런거
+# 쿼리메서드
+```
+짤막한 쿼리 짤 때 사용하면 좋음 ex) findByUsername 이런거
 엔티티 필드명과 일단 맞춰야함
 https://docs.spring.io/spring-data/jpa/docs/current/reference/html/#jpa.query-methods
 find ...(아무거나)By(필드명 첫글자 대문자로)
@@ -9,6 +11,15 @@ find ...(아무거나)By(필드명 첫글자 대문자로)
 
 장점: 간단한 쿼리 쉽게 작성가능
 단점: 길어지면 답없음
+권장: 2개까지만 ex) findByNameAndAgeGreaterThan(String name, int age
+
+조회: find…By ,read…By ,query…By get…By ... (https://docs.spring.io/spring-data/jpa/docs/current/reference/html/#repositories.query-methods.query-creation)
+예:) findHelloBy 처럼 ...에 식별하기 위한 내용(설명)이 들어가도 된다.
+COUNT: count…By 반환타입 long
+EXISTS: exists…By 반환타입 boolean
+DELETE: delete…By, remove…By 반환타입 long
+DISTINCT: findDistinct, findMemberDistinctBy
+LIMIT: findFirst3, findFirst, findTop, findTop3
 
 
 
@@ -17,7 +28,6 @@ JPA NamedQuery - 거의 사용하지 않음
 @NamedQuery(
     name="Member.findByUsername",
     query="select m from Member m where m.username = :username")
-}
 public class Member {}
 
 사용
@@ -39,7 +49,7 @@ dto도 가능함
 @Query("select new study.datajpa.dto.MemberDto(m.id, m.username, t.name) from Member m join m.team t")
 List<MemberDto> findMemberDto();
 
-파라미터 바인딩
+파라미터 바인딩(위치기반 사용X, 이름기반 사용)
 @Query("select m from Member m where m.username in :names")
 List<Member> findByNames(@Param("names") Collection<String> names);
 
@@ -122,3 +132,4 @@ JPA Hint - 성능이 크게 좋아지진 않음
 -> 변경감지를 하지않음(스냅샷을 만들지 않음)
 @QueryHints(value = @QueryHint(name = "org.hibernate.readOnly", value ="true"))
 Member findReadOnlyByUsername(String username);
+```
