jpa paging, EntityGraph, bulk ++

--- a/07스프링데이터JPA/02_쿼리메서드.md
+++ b/07스프링데이터JPA/02_쿼리메서드.md
@@ -82,6 +82,7 @@ org.springframework.data.domain.Slice : 추가 count 쿼리 없이 다음 페이
 Page<Member> findByAge(int age, Pageable pageable);
 : Slice<Member>도 가능(totalCount가 없음)
 : 성능 최적화를 위해 쿼리에 조인이 엄청 많이 발생할 경우 카운팅 쿼리를 따로 설정할 수 있음
+: 실무에서 query가 복잡해질 경우 최적화를 위해 사용해야함
 
 Pageable 파라미터 넣을 때, PageRequest class를 사용하면됨
 ex) PageRequest pageRequest = PageRequest.of(0, 3, Sort.by(Sort.Direction.DESC, "username"));
@@ -98,6 +99,7 @@ Page<MemberDto> dtoPage = page.map(m -> new MemberDto());
 벌크성 수정
 순수 JPA
 : executeUpdate()
+
 Data JPA
 : @Modifying 
 : @Query("update Member m set m.age + 1 where m.age >= :age")
@@ -105,8 +107,9 @@ Data JPA
 
 주의
 벌크연산 후 영속성 컨텍스트를 clear해줘야함
+(애초에 벌크연산은 영속성 컨텍스트를 거치지않고 DB에 바로 query를 보내기 때문)
 spring data JPA에서는
-@Modifying(clearAutomatically = true)해주면 된다
+@Modifying(clearAutomatically = true)해주면 된다(defaulf = true)
 
 
 
@@ -124,6 +127,13 @@ List<Member> findMemberEntityGraph();
 
 : 위 3개는 같은 결과를 반환함
 : @EntityGraph - 페치조인임
+: @Query를 쓰지않고 메서드이름만으로 정의하고 싶을 때 사용하자!
+:
+: ex)
+: @EntityGraph(attributePaths = {"team"})
+: List<Member> findByName(String name);
+: 쿼리 직접 작성안하고 fetch join을 해버림 즉 annotation으로 fetch join을 query에 추가하는 것
+: 단점 - left join만 지원함
 
 
 
