--- a/05JPA/05_고급매핑.md
+++ b/05JPA/05_고급매핑.md
@@ -15,8 +15,8 @@ Item
 : SINGLE_TABLE: 단일 테이블 전략(한 테이블에 다 들어감)
 : TABLE_PER_CLASS: 구현 클래스마다 테이블 전략(item을 없애고 item속성을 중복되게 자식으로 다 내림, item클래스를 추상클래스로 해줘야함)
 
-@DiscriminatorColumn(name=“DTYPE”) 
-@DiscriminatorValue(“XXX”)
+@DiscriminatorColumn(name="DTYPE") 
+@DiscriminatorValue("XXX")
 : item클래스에 @DiscriminatorColumn(name = "DTYPE")을 넣으면
 : item테이블에 구분을 위한? DTYPE 컬럼하나를 넣는다
 : 자식 클래스명(엔티티명)으로 들어간다 Movie, Book, Album
