--- a/07스프링데이터JPA/02_쿼리메서드.md
+++ b/07스프링데이터JPA/02_쿼리메서드.md
@@ -20,10 +20,10 @@ EXISTS: exists…By 반환타입 boolean
 DELETE: delete…By, remove…By 반환타입 long
 DISTINCT: findDistinct, findMemberDistinctBy
 LIMIT: findFirst3, findFirst, findTop, findTop3
+```
 
-
-
-JPA NamedQuery - 거의 사용하지 않음
+## JPA NamedQuery - 거의 사용하지 않음
+```
 엔티티에 적음
 @NamedQuery(
     name="Member.findByUsername",
@@ -37,10 +37,10 @@ public class Member {}
 
 장점: 쿼리(필드명)이 틀리면 어플리케이션 로딩시점에 에러를 띄움(실행이 안됨)
 단점: 여기저기 나뉘어져있음
+```
 
-
-
-@Query - 실무에서 많이 씀
+## @Query - 실무에서 많이 씀
+```
 interface(repository)에 작성함
 @Query("select m from Member m where m.username :username and m.age = :age")
 List<Member> findUser(@Param("username") String username, @Param("age") int age);
@@ -62,13 +62,10 @@ https://docs.spring.io/spring-data/jpa/docs/current/reference/html/#repository-q
 
 장점: 쿼리(필드명)이 틀리면 어플리케이션 로딩시점에 에러를 띄움(실행이 안됨)
 단점: 동적쿼리는 QueryDSL을 사용해야함
+```
 
-
-
-★★★
-★★★
-★★★
-페이징과 정렬 파라미터
+## 페이징과 정렬 파라미터
+```
 org.springframework.data.domain.Sort : 정렬 기능
 org.springframework.data.domain.Pageable : 페이징 기능 (내부에 Sort 포함)
 
@@ -90,13 +87,10 @@ ex) PageRequest pageRequest = PageRequest.of(0, 3, Sort.by(Sort.Direction.DESC, 
 꿀팁!
 API 통신에서 page content를 DTO로 만들기
 Page<MemberDto> dtoPage = page.map(m -> new MemberDto());
-★★★
-★★★
-★★★
+```
 
-
-
-벌크성 수정
+## 벌크성 수정
+```
 순수 JPA
 : executeUpdate()
 
@@ -110,9 +104,10 @@ Data JPA
 (애초에 벌크연산은 영속성 컨텍스트를 거치지않고 DB에 바로 query를 보내기 때문)
 spring data JPA에서는
 @Modifying(clearAutomatically = true)해주면 된다(defaulf = true)
+```
 
-
-
+## EntityGraph
+```
 fetch join을 쓰고싶을 때?  
 @Query("select m from Member m left join fetch m.team")
 List<Member> findMemberFetchJoin();
@@ -134,12 +129,15 @@ List<Member> findMemberEntityGraph();
 : List<Member> findByName(String name);
 : 쿼리 직접 작성안하고 fetch join을 해버림 즉 annotation으로 fetch join을 query에 추가하는 것
 : 단점 - left join만 지원함
+```
 
-
-
-JPA Hint - 성능이 크게 좋아지진 않음
+## JPA Hint - 성능이 크게 좋아지진 않음
+```
+SQL hint가 아니라 JPA 구현체에게 제공하는 hint(JPA지원X, Hibernate에서 지원하는 기능)
 오직 조회목적으로 사용한다면 최적화를 할 수 있다
 -> 변경감지를 하지않음(스냅샷을 만들지 않음)
 @QueryHints(value = @QueryHint(name = "org.hibernate.readOnly", value ="true"))
 Member findReadOnlyByUsername(String username);
+
+권장 -> 모두 쓰진 말고 정말 중요한(큰) 쿼리에만 종종 사용할 것
 ```
