--- a/07스프링데이터JPA/03_확장기능.md
+++ b/07스프링데이터JPA/03_확장기능.md
@@ -1,4 +1,6 @@
-사용자 정의 리포지토리 구현
+# JPA 확장기능
+## 사용자 정의 리포지토리 구현
+```
 jpa말고 다른 mybatis, querydsl등 따로 사용하고 싶을 때 정의할 수 있음
 
 ex)
@@ -18,10 +20,11 @@ public class MemberRepositoryImpl implements MemberRepositoryCustom {
     public List<Member> findMemberCustom() {}
 }
 : MemberRepository + "Impl" 이라고 이름 맞춰줘야함
+: JpaRepository를 상속받은 "interface 이름 + Impl"
+```
 
-
-
-Auditing
+## Auditing
+```
 순수 JPA
 : @MappedSuperclass
 ex)
@@ -55,7 +58,7 @@ public class BaseTimeEntity {
     @Column(updatable = false)
     private LocalDateTime createdDate;
 
-    @LastModifiedBy
+    @LastModifiedDate
     private LocalDateTime lastModifiedDate;
 }
 
@@ -69,28 +72,43 @@ public AuditorAware<String> auditorProvider() {
 @EntityListeners(AuditingEntityListener.class)
 @MappedSuperclass
 @Getter
-public class BaseEntity extends BaseTimeEntity{
+public class BaseTimeEntity {
+    @CreatedDate
+    @Column(updatable = false)
+    private LocalDateTime createdDate;
+
+    @LastModifiedDate
+    private LocalDateTime lastModifiedDate;
+}
+
+@EntityListeners(AuditingEntityListener.class)
+@MappedSuperclass
+@Getter
+public class BaseEntity extends BaseTimeEntity {
     @CreatedBy
     @Column(updatable = false)
     private String createdBy;
 
     @LastModifiedBy
-    private String updatedBy;
+    private String lastModifiedBy;
 }
 
+: 위 경우가 제일 좋은 방법
+: date는 대부분 필요하고 By는 부분적으로 필요할 경우가 많기때문
+```
 
-
-도메인 클래스 컨버터 - not recommended
+## 도메인 클래스 컨버터 - not recommended
+```
 : HTTP 파라미터로 넘어온 엔티티의 아이디로 엔티티 객체를 찾아서 바인딩
 : 도메인 클래스 컨버터로 엔티티를 파라미터로 받으면, 이 엔티티는 단순 조회용으로만 사용해야 한다
 @GetMapping("/members2/{id}")
 public String findMember2(@PathVariable("id") Member member) {
     return member.getUsername();
 }
+```
 
-
-
-페이징과 정렬
+## 페이징과 정렬
+```
 : 스프링 데이터가 제공하는 페이징과 정렬 기능을 스프링 MVC에서 편리하게 사용할 수 있다.
 @GetMapping("/members")
 public Page<Member> list(Pageable pageable) {
@@ -111,11 +129,31 @@ spring.data.web.pageable.default-page-size=20 /# 기본 페이지 사이즈/
 spring.data.web.pageable.max-page-size=2000 /# 최대 페이지 사이즈/
 
 2. 개별설정
-(@PageableDefault(size = 12, sort = “username”, direction = Sort.Direction.DESC) Pageable pageable
+(@PageableDefault(size = 12, sort = "username", direction = Sort.Direction.DESC) Pageable pageable
 
+다시 적는 꿀팁
+Page<Member> -> Page<MebmerDto>
+엔티티를 dto로 변환해서 반환해야함 -> map 사용할 것 !!
++ Page interface 자체는 반환해도됨
+```
 
+## JPA 구현체
+```
+@Repository 적용: JPA 예외를 스프링이 추상화한 예외로 변환
+@Transactional 트랜잭션 적용
+JPA의 모든 변경은 트랜잭션 안에서 동작
+스프링 데이 터JPA는 변경(등록, 수정, 삭제) 메서드를 트랜잭션 처리
+서비스 계층에서 트랜잭션을 시작하지 않으면 repository에서 트랜잭션 시작
+서비스 계층에서 트랜잭션을 시작하면 repository는 해당 트랜잭션을 전파 받아서 사용
+그래서 스프링 데이터 JPA를 사용할 때 트랜잭션이 없어도 데이터 등록, 변경이 가능했음(사실은트랜잭션이 리포지토리 계층에 걸려있는 것임)
 
-새로운 엔티티를 구별하는 방법
+@Transactional(readOnly = true)
+데이터를 단순히 조회만 하고 변경하지 않는 트랜잭션에서 readOnly = true 옵션을 사용하면
+플러시를 생략해서 약간의 성능 향상을 얻을 수 있음
+```
+
+## 새로운 엔티티를 구별하는 방법
+```
 매우 중요!!!
 save() 메서드
 새로운 엔티티면 저장( persist )
@@ -130,17 +168,17 @@ public interface Persistable<ID> {
     boolean isNew();
 }
 
--> pk 직접할당시, 다른 조취를 취해주지 않으면 save 호출 시 merge를 수행하게됨
+-> pk 직접할당시(@GeneatedValue 사용 안할 시), 다른 조취를 취해주지 않으면 save 호출 시 merge를 수행하게됨
 -> 따라서 implements Persistable<pk타입>을 해주는게 좋다
 
-JPA 식별자 생성 전략이 @GenerateValue 면 save() 호출 시점에 식별자가 없으므로 새로운
-엔티티로 인식해서 정상 동작한다. 그런데 JPA 식별자 생성 전략이 @Id 만 사용해서 직접 할당이면 이미
-식별자 값이 있는 상태로 save() 를 호출한다. 따라서 이 경우 merge() 가 호출된다. merge() 는 우선
-DB를 호출해서 값을 확인하고, DB에 값이 없으면 새로운 엔티티로 인지하므로 매우 비효율 적이다. 따라서
-Persistable 를 사용해서 새로운 엔티티 확인 여부를 직접 구현하게는 효과적이다.
-참고로 등록시간( @CreatedDate )을 조합해서 사용하면 이 필드로 새로운 엔티티 여부를 편리하게 확인할
-수 있다. (@CreatedDate에 값이 없으면 새로운 엔티티로 판단)
+JPA 식별자 생성 전략이 @GenerateValue 면 save() 호출 시점에 식별자가 없으므로 새로운 엔티티로 인식해서 정상 동작
+그런데 JPA 식별자 생성 전략이 @Id 만 사용해서 직접 할당이면 이미 식별자 값이 있는 상태로 save() 를 호출
+따라서 이 경우 merge() 호출
+merge() 는 우선 DB를 호출해서 값을 확인하고, DB에 값이 없으면 새로운 엔티티로 인지하므로 매우 비효율
+따라서 Persistable 를 사용해서 새로운 엔티티 확인 여부를 직접 구현하게는 효과적
+참고로 등록시간( @CreatedDate )을 조합해서 사용하면 이 필드로 새로운 엔티티 여부를 편리하게 확인할수 있다(@CreatedDate에 값이 없으면 새로운 엔티티로 판단)
 -> @GeneratedValue를 안쓰고 @Id만써서 직접할당이어도 merge를 쓰면 안됨
+
 ex)
 @EntityListeners(AuditingEntityListener.class) 
 public class Item implements Persistable<String> {
@@ -157,12 +195,12 @@ public class Item implements Persistable<String> {
     @Override
     public boolean isNew() {return createdDate == null;}
 }
+```
 
-
-
-Projections
+## Projections
+```
 : 엔티티 대신 DTO를 편리하게 조회할 때 사용
-ex)
+ex) 인터페이스 기반 close Projections
 public interface UsernameOnly {String getUsername();}
 List<UsernameOnly> findProjectionsByUsername(String username);
 : 프로퍼티 형식(getter)의 인터페이스를 제공하면, 구현체는 스프링 데이터 JPA가 제공
@@ -176,6 +214,7 @@ public interface UsernameOnly {
 
 클래스 기반 Projection
 public class UsernameOnlyDto {
+    // 파라미터 명을 보고 분석하기 때문에 주의할 것
     private final String username;
     public UsernameOnlyDto(String username) {
         this.username = username;
@@ -185,7 +224,7 @@ public class UsernameOnlyDto {
     }
 }
 
-동적 Projections
+동적 Projections(클래스 타입만 명기하면 잘 작동함)
 <T> List<T> findProjectionsByUsername(String username, Class<T> type);
 List<UsernameOnly> result = memberRepository.findProjectionsByUsername("m1", UsernameOnly.class);
 
@@ -204,15 +243,17 @@ projectios 정리
 : 프로젝션 대상이 root 엔티티를 넘어가면 JPQL SELECT 최적화가 안된다!
 : 실무의 복잡한 쿼리를 해결하기에는 한계가 있다.
 : 실무에서는 단순할 때만 사용하고, 조금만 복잡해지면 QueryDSL을 사용하자
+```
 
-
-
-native query
+## native query
+```
 : 권장X, 마지막에 사용
+: 권장 - 차라리 << JDBC Template >>를 사용
 
-projections 활용
+정적쿼리를 native query + projections 활용
 @Query(value = "SELECT m.member_id as id, m.username, t.name as teamName " +
     "FROM member m left join team t",
     countQuery = "SELECT count(*) from member",
     nativeQuery = true)
 Page<MemberProjection> findByNativeProjection(Pageable pageable);
+```
