--- a/08Querydsl/01_기본문법.md
+++ b/08Querydsl/01_기본문법.md
@@ -1,69 +1,79 @@
-기본문법
-ex)
-JPAQueryFactory queryFactory = new JPAQueryFactory(em);
-QMember qMember = QMember.member;
-Member member = queryFactory.select(qMember).from(qMember).where(qMember.username.eq("member111")).fetchOne();
-assertThat(member.getAge()).isEqualTo(10);
+# 기본문법
+```
+진짜 좋은점
+: 컴파일 단계에서 쿼리문법을 잡아준다 -> QType을 만들기 때문
+: 파라미터 바인딩을 자동으로 해결해준다
+: code assistence 매우 훌륭함
+```
 
-
-
-기본 Q-type 활용
+## 기본 Q-type 활용
+```
 QMember qMember = new QMember("m"); // 별칭 직접 지정 - 같은 테이블 조인할 경우에만 별칭 사용함
 QMember qMember = QMember.member; // 기본 인스턴스 사용(static import를 하면 코드를 더 깔끔하게 할 수 있다)
 
+JPQL 로그 확인하기
+spring.jpa.properties.hibernate.use_sql_comments: true
+```
 
-
-검색 조건 쿼리
-검색 조건은 .and() , . or() 를 메서드 체인으로 연결할 수 있다
+## 검색 조건 쿼리
+```
+검색 조건은 .and() | .or() 를 메서드 체인으로 연결할 수 있다
 체인으로 안넘기고 파라미터로 넘기면 and로 연결됨
 참고: select , from 을 selectFrom 으로 합칠 수 있음
 ex)
-member.username.eq("member1") // username = 'member1'
-member.username.ne("member1") //username != 'member1'
-member.username.eq("member1").not() // username != 'member1'
-member.username.isNotNull() //이름이 is not null
-member.age.in(10, 20) // age in (10,20)
-member.age.notIn(10, 20) // age not in (10, 20)
-member.age.between(10,30) //between 10, 30
-member.age.goe(30) // age >= 30
-member.age.gt(30) // age > 30
-member.age.loe(30) // age <= 30
-member.age.lt(30) // age < 30
-member.username.like("member%") //like 검색
-member.username.contains("member") // like ‘%member%’ 검색
-member.username.startsWith("member") //like ‘member%’ 검색
+member.username.eq("member1")        // username = 'member1'
+member.username.ne("member1")        //username != 'member1'
+member.username.eq("member1").not()  // username != 'member1'
+member.username.isNotNull()          // 이름이 is not null
+member.age.in(10, 20)                // age in (10,20)
+member.age.notIn(10, 20)             // age not in (10, 20)
+member.age.between(10,30)            // between 10, 30
+member.age.goe(30)                   // age >= 30
+member.age.gt(30)                    // age > 30
+member.age.loe(30)                   // age <= 30
+member.age.lt(30)                    // age < 30
+member.username.like("member%")      // like 검색
+member.username.contains("member")   // like '%member%' 검색
+member.username.startsWith("member") // like 'member%' 검색
+
+.where(
+    QMember.member.name.eq("member1"), // 이렇게 콤마(,)로 연결해도 and 조건으로 query됨
+    QMember.member.age.eq(1)
+)
 
 ★★★
 ★★★
 ★★★
-where문에서 만약 null이 들어가면 무시됨
+꿀팁 - where문에서 만약 null이 들어가면 무시됨
 ★★★
 ★★★
 ★★★
+```
 
-
-
-결과 조회
+## 결과 조회
+```
 fetch() : 리스트 조회, 데이터 없으면 빈 리스트 반환
 fetchOne() : 단 건 조회
-결과가 없으면 : null
-결과가 둘 이상이면 : com.querydsl.core.NonUniqueResultException
+    결과가 없으면 : null
+    결과가 둘 이상이면 : com.querydsl.core.NonUniqueResultException
 fetchFirst() : limit(1).fetchOne()
 fetchResults() : 페이징 정보 포함, total count 쿼리 추가 실행
 fetchCount() : count 쿼리로 변경해서 count 수 조회
+```
 
-
-
-정렬
+## 정렬
+```
 .orderBy(member.age.desc(), member.username.asc().nullsLast())
 desc() , asc() : 일반 정렬
 nullsLast() , nullsFirst() : null 데이터 순서 부여
+```
 
-
-
-페이징
+## 페이징
+```
 .offset(1) //0부터 시작(zero index)
 .limit(2) //최대 2건 조회
+
+.fetchResults() 
 queryResults.getTotal()
 queryResults.getLimit()
 queryResults.getOffset()
@@ -72,10 +82,10 @@ queryResults.getResults()..size()
 count 쿼리는 조인이 필요 없는 경우도 있다. 그런데 이렇게 자동화된 count 쿼리는 원본 쿼리와 같이 모두
 조인을 해버리기 때문에 성능이 안나올 수 있다. count 쿼리에 조인이 필요없는 성능 최적화가 필요하다면,
 count 전용 쿼리를 별도로 작성해야 한다
+```
 
-
-
-집합
+## 집합
+```
 queryFactory
     .select(
         member.count(),
@@ -91,6 +101,8 @@ tuple.get(member.count())
 tuple.get(member.age.sum())
 tuple.get(member.age.avg())
 tuple.get(member.age.max())
+
+Tuple은 잘 사용하진 않는다
 ...
 
 groupBy 사용
@@ -106,10 +118,10 @@ Tuple teamB = result.get(1);
 teamA.get(team.name)
 teamA.get(member.age.avg())
 ...
+```
 
-
-
-조인
+## 조인
+```
 join(조인 대상, 별칭으로 사용할 Q타입)
 List<Member> result = queryFactory
     .selectFrom(member)
@@ -121,12 +133,13 @@ leftJoin() : left 외부 조인(left outer join)
 rightJoin() : rigth 외부 조인(rigth outer join)
 JPQL의 on 과 성능 최적화를 위한 fetch 조인 제공 다음 on 절에
 
-세타 조인
+세타 조인 cross join
 연관관계가 없는 필드로 조인
 .from(member, team)
 from 절에 여러 엔티티를 선택해서 세타 조인
 
 on절
+조인대상 필터링
 List<Tuple> result = queryFactory
     .select(member, team)
     .from(member)
@@ -152,10 +165,10 @@ Member findMember = queryFactory
     .join(member.team, team).fetchJoin()
     .where(member.username.eq("member1"))
     .fetchOne();
+```
 
-
-
-서브쿼리
+## 서브쿼리
+```
 where절에 subquery
 com.querydsl.jpa.JPAExpressions 사용
 QMember member = new QMember("member");
@@ -183,10 +196,10 @@ from 절의 서브쿼리 해결방안
 1. 서브쿼리를 join으로 변경한다. (가능한 상황도 있고, 불가능한 상황도 있다.)
 2. 애플리케이션에서 쿼리를 2번 분리해서 실행한다.
 3. nativeSQL을 사용한다.
+```
 
-
-
-case문
+## case문
+```
 List<String> result = queryFactory
     .select(member.age
         .when(10).then("열살")
@@ -221,9 +234,14 @@ List<Tuple> result = queryFactory
     .orderBy(rankPath.desc())
     .fetch();
 
+권장 - DB에서 계산하는 것은 좋지 않다
+        애플리케이션에서 계산해주는게 좋다
+        DB에서는 filtering, grouping 정도만 하는것이 좋다
+```
 
 
-상수, 문자 더하기
+## 상수, 문자 더하기
+```
 상수가 필요하면 Expressions.constant(xxx) 사용
 Tuple result = queryFactory
     .select(member.username, Expressions.constant("A"))
@@ -237,3 +255,4 @@ String result = queryFactory
     .where(member.username.eq("member1"))
     .fetchOne();
 문자가 아닌 다른 타입들은 stringValue()로 문자로 변환할 수 있다. 이 방법은 ENUM을 처리할 때도 자주 사용한다.
+```
