--- a/08Querydsl/02_중급문법.md
+++ b/08Querydsl/02_중급문법.md
@@ -1,13 +1,15 @@
-프로젝션 - select 대상 지정
+# 중급문법
 
+## 프로젝션
+```
 결과반환 기본
 프로젝션 대상이 하나
 List<String> result = queryFactory
     .select(member.username)
     .from(member)
     .fetch();
-프로젝션 대상이 하나면(객체가 아니더라도) 타입을 명확하게 지정할 수 있음
-프로젝션 대상이 둘 이상이면 튜플이나 DTO로 조회
+: 프로젝션 대상이 하나면(객체가 아니더라도) 타입을 명확하게 지정할 수 있음
+: 프로젝션 대상이 둘 이상이면 튜플이나 DTO로 조회
 
 튜플 조회
 프로젝션 대상이 둘 이상일 때 사용
@@ -18,15 +20,15 @@ List<Tuple> result = queryFactory
 tuple.get(member.username);
 tuple.get(member.age);
 
--> tuple은 repository에서만 사용하는걸 추천
--> 밖에 나갈때는 dto로 반환해서 나가도록 설계 추천
+: tuple은 repository에서만 사용하는걸 추천
+: 밖에 나갈때는 dto로 반환해서 나가도록 설계 필수
+```
 
-
-
-결과반환 DTO
+## 프로젝션과 결과반환 DTO
+```
 : 기본생성자가 있어야함
 
-프로퍼티  접근
+프로퍼티 접근(setter 활용)
 List<MemberDto> result = queryFactory
     .select(
         Projections.bean(MemberDto.class,member.username,member.age)
@@ -42,7 +44,7 @@ List<MemberDto> result = queryFactory
     .from(member)
     .fetch();
 
-생성자 접근 - 파라미터가 안맞으면 런타임 오류가 발생함
+생성자 접근 - 파라미터가 안맞으면 런타임 오류가 발생함 - 권장
 List<MemberDto> result = queryFactory
     .select(
         Projections.constructor(MemberDto.class,member.username,member.age)
@@ -64,10 +66,10 @@ List<UserDto> fetch = queryFactory
     )
     .from(member)
     .fetch();
+```
 
-    
-
-결과반환 @QueryProjection
+## 결과반환 @QueryProjection
+```
 : DTO클래스의 생성자에 @QueryProjection를 넣어주면
 : 해당 클래스도 Q파일로 관리하게끔 된다
 : 대신 DTO자체가 querydsl에 의존적이게 된다
@@ -76,11 +78,10 @@ List<MemberDto> result = queryFactory
     .select(new QMemberDto(member.username, member.age))
     .from(member)
     .fetch();
+```
 
-ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
-
-동적쿼리
-
+## 동적쿼리
+```
 BooleanBuilder사용
 BooleanBuilder builder = new BooleanBuilder();
 if (usernameCond != null) {
@@ -116,11 +117,10 @@ private BooleanExpression ageEq(Integer ageCond) {
 private BooleanExpression allEq(String usernameCond, Integer ageCond) {
     return usernameEq(usernameCond).and(ageEq(ageCond));
 }
+```
 
-ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
-
-수정 삭제 벌크연산
-
+## 벌크연산
+```
 수정
 long count = queryFactory
     .update(member)
@@ -132,7 +132,7 @@ long count = queryFactory
     .update(member)
     .set(member.age, member.age.add(1))
     .execute();
-곱하기: multiply(x)
+곱하기: multiply(n)
 
 삭제
 long count = queryFactory
@@ -143,10 +143,10 @@ long count = queryFactory
 주의: JPQL 배치와 마찬가지로, 영속성 컨텍스트에 있는 엔티티를 무시하고 실행되기 때문에 배치 쿼리를
 실행하고 나면 영속성 컨텍스트를 초기화 하는 것이 안전하다.
 DB에서 가져온 값보다 영속성 컨텍스트가 우선권을 가지기 때문에 영속성 컨텍스트를 초기화 해줘야함
+```
 
-
-
-SQL function 호출하기
+## SQL function 호출하기
+```
 SQL function은 JPA와 같이 Dialect에 등록된 내용만 호출할 수 있다
 String result = queryFactory
     .select(
@@ -154,3 +154,25 @@ String result = queryFactory
     )
     .from(member)
     .fetchFirst();
+
+
+실제 활용
+: Dialect에 없는 함수를 사용하고자 할 경우
+
+application.properties
+spring.jpa.database-platform=com.oursurvey.config.MysqlFunctionConfig
+
+MysqlFunctionConfig.java
+public class MysqlFunctionConfig extends MySQL57Dialect {
+    public MysqlFunctionConfig() {
+        super();
+        this.registerFunction("GROUP_CONCAT", new StandardSQLFunction("GROUP_CONCAT", new StringType()));
+        this.registerFunction("DATE_FORMAT", new StandardSQLFunction("DATE_FORMAT", new StringType()));
+        this.registerFunction("WEEKDAY", new StandardSQLFunction("WEEKDAY", new StringType()));
+        this.registerFunction("DAYOFWEEK", new StandardSQLFunction("DAYOFWEEK", new StringType()));
+        this.registerFunction("DATE", new StandardSQLFunction("DATE", new StringType()));
+    }
+}
+
+ExpressionUtils.template(String.class, "GROUP_CONCAT({0})", hashtag.value)
+```
