--- a/08Querydsl/03_실무활용.md
+++ b/08Querydsl/03_실무활용.md
@@ -1,3 +1,5 @@
+# 실무 활용
+```
 사용자 정의 리포지토리
 
 <<interface>>
@@ -17,6 +19,8 @@ MemberRepositoryCustom
 MemberRepositoryImpl implements MemberRepositoryCustom
 - search()
 
+3. DTO반환 Repository, 비즈니스 로직 Repository 나누는 것을 추천
+
 
 
 페이징 활용
@@ -34,10 +38,12 @@ JPAQuery<Member> countQuery = queryFactory
     );
 return PageableExecutionUtils.getPage(content, pageable, countQuery::fetchCount);
 
+스프링 데이터 라이브러리가 제공
+count 쿼리가 생략 가능한 경우 생략해서 처리
+페이지 시작이면서 컨텐츠 사이즈가 페이지 사이즈보다 작을 때(ex. limit = 10, content size = 5)
+마지막 페이지 일 때 (offset + 컨텐츠 사이즈를 더해서 전체 사이즈 구함)
+
 
 
 정렬은 그냥 직접 파라미터로 받아서 하는걸 추천
-
-
-
-
+```
